...
            ) {
                composable(ROUTE_PROFILE_MAIN) {
                    val profileViewModel: ProfileViewModel = hiltViewModel()
                    val statsState by profileViewModel.statsState.collectAsState()

                    Column(
                        modifier = Modifier.testTag("screen_profile")
                    ) {
                        when {
                            authState.isLoading -> {
                                Box(
                                    modifier = Modifier.fillMaxSize(),
                                    contentAlignment = Alignment.Center
...
